fix hover on mobile size

--- a/portfolio/src/main/webapp/styles.css
+++ b/portfolio/src/main/webapp/styles.css
@@ -443,7 +443,7 @@ table {
     height: 50%;
     top: 14%;
     background-color: #fffcf8;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     width: 100%;
@@ -540,6 +540,7 @@ table {
 .nav-active {
   /* transform: translate(0%); */
   opacity: 1;
+  display: flex;
   z-index: 1000;
   transition: all 0.5s ease 0.2s;
 }
